--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "law-firm-website",
   "version": "0.1.0",
   "private": true,
+  "name": "your-project",
+  "homepage": "https://umbralys.github.io/law-website",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
